# RISCA

./: .env.example  .gitignore  .python-version  LICENSE  PACS_SAFETY_CHECKLIST.md  QUICKSTART.md  README.md  SOLUTION_SUMMARY.md  amylose_them_all.sh  chest_scans_report.csv  dicom_list.csv  find_chest_scans.py  list_dicom_info.py  pacs_nm_retriever.py  pacs_patient_retriever.py  pyproject.toml
dicom2fhir/: README.md  dicom2fhir.py
sql/: get_all_dicom_metadata_from_pacs.sql
webview/: Cargo.toml  README.md  build.sh  restart.sh  start.sh
webview/src/: main.rs  server.rs
webview/static/: index.html
