[package]
name = "dicom-viewer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dicom = "0.8"
dicom-object = "0.8"
dicom-pixeldata = "0.8"
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "Window",
]

[profile.release]
opt-level = "s"
lto = true
